--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -12,3 +12,24 @@ and instead show hamburger */
 }
 
 /*sections*/ 
+section{
+    padding-top: 4vh;
+    height: 96vh;
+    margin: 0 10rem;
+    box-sizing: border-box;
+    min-height: fit-content;
+}
+
+.section-container{
+    display: flex;
+}
+
+/*profile section*/
+
+#profile{
+    display: flex;
+    justify-content: center;
+    gap: 5rem;
+    height: 80vh;
+}
+
